syntax = "proto3";

import "commons.proto";
option java_package = "com.example.gbuddy.models.protos";

option java_outer_classname = "GymProto";

message Gym {
  int32 id = 1;
  string ownerName = 2;
  string name = 3;
  string website = 4;
  repeated Branch branches = 16;
}

message Branch {
  int32 id = 1;
  int32 gymId = 2;
  double latitude = 5;
  double longitude = 6;
  string contact = 7;
  Address gymAddress = 20;
}

message RegisterResponse {
  int32 responseCode = 1;
  string message = 16;
}

message FetchResponse {
  int32 responseCode = 1;
  string message = 16;
  repeated Gym gym = 17;
}

message CoordinateResponse {
  double latitude = 1;
  double longitude = 2;
  int32 responseCode = 3;
  string message = 16;
}